--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,8 @@
     <string name="answer_3">Answer #3</string>
     <string name="answer_4">Answer #4</string>
     <string name="next">Next</string>
+    <string name="wrong_answer_text">Wrong! The correct answer is %1$s!</string>
+    <string name="correct">Correct!</string>
+    <string name="number_of_correct_answers">You answered %1$d questions correct!</string>
+    <string name="confirmation_message">Are you sure you want to delete this Quiz?</string>
 </resources>
